fix(booklist): change books spacing between each other
tl;dr experiment with justify-content: space-evenly
instea of space-around

--- a/src/BookList.css
+++ b/src/BookList.css
@@ -1,7 +1,7 @@
 .book-list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .book-item {
